--- a/src/app/coach/components/coach-plans/coach-plans.component.css
+++ b/src/app/coach/components/coach-plans/coach-plans.component.css
@@ -15,6 +15,39 @@
   border: 10px solid white;
 }
 
+.card-content {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  overflow: visible;
+}
+
+.card-content img {
+  max-width: 100px;
+  height: auto;
+  margin-right: 20px; /* Aumentado el margen derecho */
+  flex-shrink: 0;
+}
+
+.text-content {
+  display: flex;
+  flex-direction: column;
+  overflow: visible;
+}
+
+.text-content mat-card-title,
+.text-content mat-card-subtitle,
+.text-content mat-card-content,
+.text-content p {
+  margin-top: 0;
+  margin-bottom: 10px; /* Asegurarse de que hay margen inferior */
+}
+
+.mat-card-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
 form {
   display: flex;
   flex-direction: column;
