--- a/src/app/member/components/member-dashboard/member-dashboard.component.html
+++ b/src/app/member/components/member-dashboard/member-dashboard.component.html
@@ -19,7 +19,7 @@
 
 <div class="sections">
   <mat-card class="sections-card">
-    <p>Entrenamientos</p>
+    <p>Entrenamientos y Dietas</p>
     <button mat-raised-button class="sections-button" routerLink="/member-trainings">Seguir</button>
   </mat-card>
   <mat-card class="sections-card">
