--- a/src/app/member/components/member-progress/member-progress.component.css
+++ b/src/app/member/components/member-progress/member-progress.component.css
@@ -8,7 +8,7 @@ h1 {
 
 .card {
   padding: 20px;
-  background-color: #A9D3FF;
+  background-color: #A9D3FF; /* Blue background */
   max-width: 90%;
   display: flex;
   flex-direction: column;
@@ -33,7 +33,7 @@ mat-card-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #93ACB5;
+  background-color: #93ACB5; /* Grey-blue background */
   border-radius: 10px;
   padding: 5px;
 }
@@ -50,41 +50,6 @@ mat-card-content {
   padding: 10px;
   font-size: 17px;
   color: #FFFFFF;
-}
-
-.button {
-  padding-left: 90%;
-}
-
-.color-boton {
-  background-color: #3f51b5;
-  color: white;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5em 1em;
-  min-width: 64px;
-  min-height: 36px;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.color-boton:hover {
-  transform: scale(1.05);
-}
-
-.color-boton:active,
-.color-boton:focus {
-  background-color: rgba(0, 0, 0, 0.08);
-  color: rgba(0, 0, 0, 0.87);
 }
 
 @media (max-width: 768px) {
@@ -106,9 +71,5 @@ mat-card-content {
   .date {
     font-size: 14px;
     padding: 5px;
-  }
-
-  .button {
-    padding-left: 80%;
   }
 }
