--- a/src/app/member/components/member-progress/member-progress.component.html
+++ b/src/app/member/components/member-progress/member-progress.component.html
@@ -11,26 +11,15 @@
 
 <mat-card class="card">
   <mat-card-header class="name">
-    Coach: Juan Perez
+    Coach: {{ coachName }}
   </mat-card-header>
-  <mat-card-content>
-    <div class="notification">
-      <div class="message">Comentario: Sigue así, vas muy bien!</div>
-      <div class="date">27/05/24</div>
-    </div>
-  </mat-card-content>
-  <mat-card-content>
-    <div class="notification">
-      <div class="message">Comentario: Necesitas mejorar en tu dieta.</div>
-      <div class="date">22/05/24</div>
-    </div>
-  </mat-card-content>
-  <mat-card-content>
-    <div class="notification">
-      <div class="message">Comentario: Excelente progreso esta semana.</div>
-      <div class="date">20/05/24</div>
-    </div>
-  </mat-card-content>
+  <ng-container *ngFor="let progress of progressList">
+    <mat-card-content>
+      <div class="notification">
+        <div class="message">{{ progress.content }}</div>
+        <div class="date">{{ progress.date | date: 'dd/MM/yy' }}</div>
+      </div>
+    </mat-card-content>
+  </ng-container>
 </mat-card>
-
 
