--- a/src/app/coach/components/coach-profile/coach-profile.component.html
+++ b/src/app/coach/components/coach-profile/coach-profile.component.html
@@ -1,4 +1,11 @@
-
+<header style="background-color: #333333; color: white; display: flex; justify-content: space-between; padding: 10px;">
+  <a routerLink="/coach-dashboard">
+    <img src="assets/images/icons/back-icon.png" alt="member-icon" style="width: 30px; height: 50px; margin-top: 15%; margin-left: 5%">
+  </a>
+  <a routerLink="/coach-profile">
+    <img src="assets/images/member/member-icon.png" alt="member-icon" style="width: 50px; height: 50px; margin-top: 15%">
+  </a>
+</header>
 <div class="background">
   <div class="container">
     <div class="perfil">
