--- a/src/app/public/components/login/login.component.css
+++ b/src/app/public/components/login/login.component.css
@@ -72,6 +72,10 @@ mat-error {
   width: 100%;
   margin-top: 10px;
 }
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
 
 @media (max-width: 611px) {
   .welcome-text h1 {
